✨重构云服务组件